# Shipwright

./: .gitmodules  CMakeLists.txt  Jenkinsfile
.github/workflows/: generate-builds.yml
OTRExporter/: CMakeLists.txt
OTRExporter/OTRExporter/: Makefile
OTRExporter/assets/accessibility/texts/: kaleidoscope_eng.json
OTRGui/: CMakeLists.txt
ZAPDTR/: Makefile
ZAPDTR/ZAPD/: CMakeLists.txt
libultraship/: .gitignore  CMakeLists.txt  Makefile
libultraship/example/: CMakeLists.txt  main.cpp
libultraship/libultraship/: CMakeLists.txt  CoreAudioPlayer.cpp  CoreAudioPlayer.h  DarwinSpeechSynthesizer.mm  ImGuiImpl.cpp  SAPISpeechSynthesizer.cpp  SAPISpeechSynthesizer.h  SohConsole.cpp  SohImGuiImpl.cpp  SohImGuiImpl.h  Window.cpp  Window.h  WindowShim.cpp
libultraship/libultraship/Lib/Fast3D/: fragment-shader.glsl  gfx_direct3d11.cpp  gfx_dxgi.cpp  gfx_glx.cpp  gfx_metal.cc  gfx_metal.cpp  gfx_metal.h  gfx_metal.mm  gfx_opengl.cpp  gfx_pc.cpp  gfx_rendering_api.h  gfx_sdl2.cpp  gfx_window_manager_api.h  vertex-shader.glsl
libultraship/libultraship/Lib/ImGui/: imconfig.h
libultraship/libutraship.xcodeproj/: project.pbxproj
soh/: .gitignore  CMakeLists.txt  Makefile
soh/include/: functions.h  z64.h
soh/soh/: GameMenuBar.cpp  OTRAudio.h  OTRGlobals.cpp  OTRGlobals.h  SaveManager.cpp  gu_pc.c  z_message_OTR.cpp
soh/soh/Enhancements/: bootcommands.c  debugconsole.cpp  debugconsole.h  savestates.cpp
soh/soh/Enhancements/tts/: tts.cpp
soh/src/code/: padmgr.c  z_actor.c  z_camera.c  z_collision_check.c  z_message_PAL.c  z_parameter.c  z_player_lib.c
(+16 files in other folders)
